--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "husky": "^8.0.0",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "husky": "^8.0.3",
     "prettier": "^3.0.1"
   }
 }
