--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "lint:fix": "eslint ./src --fix",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,html,css,json}": [
+      "yarn prettier --write"
+    ]
+  },
   "dependencies": {
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
@@ -36,7 +41,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "husky": "^8.0.3",
-    "prettier": "^3.0.1"
+    "husky": "^8.0.0",
+    "prettier": "^3.0.2"
   }
 }
